# AI-native-brokerage

./: .gitignore  .worktreeinclude  CLAUDE.md  README.md  SEVINO_RENAME_CHECKLIST.md
saturn-api/: .env.example  CLAUDE.md  Makefile  Procfile  README.md  pyproject.toml
saturn-api/app/: config.py  database.py  exceptions.py  lifecycle.py  logging_config.py  main.py  rate_limit.py  worker.py
saturn-api/app/middleware/: __init__.py  api_key.py  logging.py
saturn-api/app/models/: __init__.py  ach_relationship.py  base.py  brokerage_account.py  conversation.py  message.py  order_event.py  plaid_item.py  radar_item.py  user_financial_profile.py  user_profile.py  user_settings.py
saturn-api/app/repositories/: brokerage_account.py
saturn-api/app/routes/: onboarding.py
saturn-api/app/schemas/: onboarding.py
saturn-api/app/services/: alpaca_broker.py  onboarding.py
saturn-api/docs/: alpaca-integration.md  architecture.md  blueprint.md  onboarding-backend-plan.md  onboarding.md  plaid-integration.md  testing.md
saturn-api/docs/database/: db_schema.html  db_schema.md
saturn-api/migrations/: env.py
saturn-api/supabase/: config.toml
saturn-api/tests/: conftest.py
saturn-api/tests/integration/: conftest.py  test_auth.py  test_error_handling.py  test_health.py  test_middleware.py
saturn-api/tests/unit/: test_config.py  test_exceptions.py  test_middleware.py  test_onboarding_service.py
sevino-api/: .env.example  .gitignore  .railway-trigger  CLAUDE.md  Makefile  Procfile  README.md  alembic.ini  pyproject.toml
sevino-api/app/: auth.py  cache.py  config.py  database.py  exceptions.py  lifecycle.py  logging_config.py  main.py  sentry_config.py  worker.py
sevino-api/app/ai/: anthropic_client.py  blocks.py  models.py
sevino-api/app/dependencies/: __init__.py  portfolio.py
sevino-api/app/listeners/: __init__.py  account_status.py  base_sse.py  registry.py  trade_events.py  transfer_status.py
sevino-api/app/middleware/: __init__.py  api_key.py  correlation.py  logging.py  user_activity.py
sevino-api/app/models/: __init__.py  ach_relationship.py  agent_turn.py  asset.py  brokerage_account.py  conversation.py  digest.py  feature_flag.py  message.py  model_invocation.py  order_event.py  pending_action.py  plaid_item.py  radar_item.py  recurring_investment.py  recurring_investment_execution.py  sse_checkpoint.py  (+4 more)
sevino-api/docs/: ARCH_FMP_BARS_MIGRATION.md  PRD_MVP.md  ai-harness.md  ai-v0-plan.md  alpaca-integration.md  architecture.md  blueprint.md  digest.md  funding.md  onboarding-backend-plan.md  onboarding.md  plaid-ach-funding-implementation.md  plaid-ach-funding-plan.md  plaid-integration.md  real-time-connections-plan.md  testing.md
sevino-api/migrations/: env.py
sevino-api/scripts/: README.md  ai_loop_smoke.py  digest_dry_run.py  fmp_alpaca_parity_check.py  funding_errors_smoke.sh  funding_reauth_smoke.sh  funding_reconcile_smoke.sh  funding_smoke.sh  funding_withdraw_smoke.sh  seed_digest.py  seed_funding_sandbox.py  seed_portfolio_e2e.py  seed_stop_sandbox.py  stop_order_smoke.sh  stop_trigger_fill_smoke.sh
sevino-api/supabase/: config.toml
sevino-api/tests/: conftest.py
(+971 files in other folders)
