[project]
name = "saturn-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pyjwt",
    "pydantic-settings",
    "alpaca-py",
    "plaid-python",
    "arq",
    "httpx",
]
