[project]
name = "sevino-api"
version = "0.1.0"
description = "Sevino backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pyjwt",
    "cryptography",
    "pydantic-settings",
    "alpaca-py",
    "plaid-python",
    "arq==0.27.0",
    "httpx",
    "structlog>=25.5.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.56.0",
    "httpx-sse>=0.4.3",
    "anthropic>=0.40.0",
    "langfuse>=4.5.1",
    "sse-starlette>=2.1.0",
    "python-ulid>=3.1.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
